Fixing extra spaces in bullet lists

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -48,14 +48,28 @@ body {
     }
 }
 
-.content h3 {
-    margin-top: 30px;
-}
-
-.content ul {
-    padding: 15px;
-    li {
-        line-height: 1.5;
-        height: auto;
+.content {
+    p {
+        margin-bottom: 10px;
+    }
+    h3 {
+        margin-top: 30px;
+    }
+    ul {
+        padding-top: 0px;
+        padding-bottom: 0px;
+        li {
+            line-height: 1.5;
+            height: auto;
+            margin-bottom: 10px;
+            ul {
+                margin: 0px;
+                padding-top: 5px;
+                padding-bottom: 0px;
+                li {
+                    margin-bottom: 0px;
+                }
+            }
+        }
     }
 }
